[package]
name = "nwc_gui"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"


[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.96"
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
chrono = "0.4.26"
email_address = "0.2.4"
url = "2.3.1"
reqwest = "0.11.18"
nostr = { version = "0.22.0" }
gloo-net = "0.2.6"
futures = "0.3.25"
log = "0.4"
console_log = { version = "1"}


[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[profile.release]
lto = "thin"
opt-level = 'z'

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

